fix: project title text wraps and no overflows gf-150

--- a/apps/frontend/src/pages/project/styles.module.css
+++ b/apps/frontend/src/pages/project/styles.module.css
@@ -11,6 +11,7 @@
 	margin: 0;
 	font-size: 30px;
 	line-height: 120%;
+	word-break: break-word;
 }
 
 .project-description-layout {
